# RoseNG

./: CMakeLists.txt  LICENSE
src/: color.cpp  renderer.cpp  vector2.cpp
src/include/: color.hpp  renderer.hpp  vector2.hpp
